[package]
name = "ch8_4_8_session_1"
version = "0.1.0"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
session_types = { git = "https://github.com/Munksgaard/session-types.git" }
